--- a/app/views/one_time.slim
+++ b/app/views/one_time.slim
@@ -14,6 +14,7 @@ head
   == partial(:'shared/scripts')
   == css :application
   == css :one_time
+  == js :one_time
 
 body
 
@@ -100,121 +101,3 @@ body
 
       .row
         input type='submit' id="subscribe" class="btn-submit" value="Purchase"
-
-
-
-javascript:
-  var error_fields = {
-    first_name: 'First name',
-    last_name: 'Last name',
-    email: 'Email address',
-    number: 'Credit Card number',
-    postal_code: 'Postal Code',
-    month: 'Expiration Month',
-    year: 'Expiration Year'
-  }
-
-  // Configure recurly.js
-  //recurly.configure('9bed482cacae41748f405c2d361fdc6a');
-  recurly.configure('sc-Hw20ERMh8bzGFiWKO7NvDB');
-  
-
-  // On form submit, we stop submission to go get the token
-  $('form').on('submit', function (event) {
-    event.preventDefault();
-
-    // Reset the errors display
-    $('#errors').text('');
-    $('input').removeClass('error');
-    $('.form-input').removeClass('form-input__error');
-
-    // Disable the submit button
-    $('.btn-submit').prop('disabled', true);
-
-    var form = this;
-
-    // Now we call recurly.token with the form. It goes to Recurly servers
-    // to tokenize the credit card information, then injects the token into the
-    // data-recurly="token" field above
-    recurly.token(form, function (err, token) {
-
-      console.log(err);
-
-      if (err) {
-        error(err);
-      }
-      else {
-        var data = {
-          "recurly-token": $('input[name="recurly-token"]').val(),
-          "first-name": $('input[name="first-name"]').val(),
-          "last-name": $('input[name="last-name"]').val()
-          //"email": $('input[name="email"]').val()
-        };
-
-        $.ajax({
-          type: "POST",
-          url: '/api/transactions',
-          data: data,
-          success: subscription_created(data),
-          dataType: 'json'
-        });
-
-      };
-
-    });
-
-  });
-
-  function subscription_created(data) {
-    $('form').addClass('form__success');
-
-    $('.confirmation').addClass('confirmation__show');
-    $('.confirmation-messaging').addClass('animate');
-  }
-
-  $(document).ready(function() {
-
-    // Identity card type
-    $("#number").on('change', function(event) {
-      var card_number = $("#number").val()
-        , card_type = recurly.validate.cardType(card_number)
-        , card_is_valid = recurly.validate.cardNumber($("#number").val())
-        , number_field = $('.customer-fields--card-number .form-input');
-
-      if(card_is_valid) {
-        $(number_field).removeClass('form-input__error');
-      }
-      else {
-        $(number_field).addClass('form-input__error');
-      }
-
-      if((card_type == 'default') || (card_type == 'unknown')) {
-        $('.icon-card').addClass('icon-card__generic');
-        $('.icon-card').removeClass('icon-card__visa icon-card__mastercard icon-card__amex icon-card__visa discover');
-      }
-      else {
-        $('.icon-card').removeClass('icon-card__generic');
-        $('.icon-card').addClass('icon-card__' + card_type);
-      }
-    });
-
-  });
-
-
-  // A simple error handling function to expose errors to the customer
-  function error (err) {
-    var errors_markup = $.map(err.fields, function (field) {
-      $('.form-input__' + field).addClass('form-input__error');
-      return '<li class="form-errors--invalid-field">'+ error_fields[field] +'</li>';
-    }).join('');
-
-    $('.form-errors').removeClass('form-errors__hidden');
-    $('.form-errors ul')
-      .empty()
-      .append(errors_markup);
-
-    $('input[type="submit"]').prop('disabled', false);
-    $.each(err.fields, function (i, field) {
-      $('[data-recurly=' + field + ']').addClass('error');
-    });
-  }
