--- a/app/views/update_billing.slim
+++ b/app/views/update_billing.slim
@@ -23,10 +23,10 @@ body
       h1 Kale Krate
 
     .form-bar
-      .subscription-name-container
+      .subscription-name-container.update-billing
         strong.subscription-name Update Billing Information
 
-      .subscription-pricing-container
+      .subscription-pricing-container.update-billing
         .subscription-pricing
           span.subscription-price Account: kalekrate
 
