--- a/app/assets/stylesheets/themes/kalekrate/form-onetime.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-onetime.scss
@@ -31,7 +31,7 @@ input.quantity {
   float:right;
 }
 .subscription-name-container.update-billing {
-  with:100%;
+  width:100%;
   .subscription-name {
     width:100%;
     text-align:center;
