working on update billing

--- a/app/assets/stylesheets/themes/kalekrate/form-onetime.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-onetime.scss
@@ -32,6 +32,7 @@ input.quantity {
 }
 .subscription-name-container.update-billing {
   width:100%;
+  padding: 37px 0 30px;
   .subscription-name {
     width:100%;
     text-align:center;
