working on update billing

--- a/app/views/update_billing.slim
+++ b/app/views/update_billing.slim
@@ -14,7 +14,7 @@ head
   == partial(:'shared/scripts')
   == css :application
   == css :one_time
-  == js :one_time
+  == js :update_billing
 
 body
 
