--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -18,111 +18,135 @@ head
 
 body
 
-  .form
-    .form-bar
-      .subscription-name-container
-        select data-recurly="plan" id="plan" name="plan"
-          option value="kale-fan" Kale Fan
-          option value="kale-krazy" Kale Krazy
+  form
+    input type="hidden" data-recurly="currency" id="plan_currency" name="plan-currency" value="USD"
+    .row
+      .subscription-details-container
+        section.form-bar
+          .subscription-name-container
+            .select-wrap.plan
+              select data-recurly="plan" id="plan" name="plan" class="plan"
+                option value="kale-fan" Kale Fan
+                option value="kale-krazy" Kale Krazy
 
-        input type="text" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="form-input__required" value="1"
-      .subscription-pricing-container
-        .subscription-pricing
-          span.subscription-price $20.99
-          span.subscription-frequency
-          | /month
+          .select-wrap.quantity
+            input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="form-input__required" value="1"
 
-    .confirmation
-      .confirmation-body
-        h2.confirmation-messaging Thank you for subscribing!
+          .select-wrap.curr
+            select data-recurly="currency_code" id="currency_code" name="currency_code" class="curr"
+              option value="USD" USD
+              option value="EUR" EUR
 
-    form method="post" action="/api/subscriptions/new"
-      input type="hidden" data-recurly="token" name="recurly-token"
-      .row
-        .form-errors.form-errors__hidden
+          .subscription-pricing-container
+            .subscription-pricing
+              span.subscription-price $20.99
+              span.subscription-frequency
+              | /month
+
+        section.form-errors.form-errors__hidden
           strong Oops! The following fields appear to be invalid:
           ul
 
-      .addons-container
-        .row
-          ul.addons-list
-            li.addons-list--item
-              span.addon-item--name Salad Spinner
-              span.addon-item--description Progressive Collapsible Salad Spinner - White/Clear (5 Qt)
-              .addon-item--pricing
-                span.addon-item--price $9.99
-                .form-input.addon-item--quantity
-                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='salad-spinner' value="0" min="0"
+        section.addons-container.hide-form-onsuccess
 
-            li.addons-list--item
-              span.addon-item--name Sliced Almonds
-              .addon-item--pricing
-                span.addon-item--price $3.00
-                .form-input.addon-item--quantity
-                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='sliced-almonds' value="0" min="0"
+        section.billing-info-container.hide-form-onsuccess
+          .row
+            h3.section-title--billing Billing Information
+            div.payment-type
+              a href="#credit-card" id="payby-credit-card" class="active" Credit Card
+              a href="#paypal" id="payby-paypal" PayPal
+          
+            div.customer-fields--name
+              .form-input.form-input__first_name
+                input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required" placeholder="First Name"
 
-            li.addons-list--item
-              span.addon-item--name Mixed Fruits
-              span.addon-item--description Raisins, cranberries, apricots
-              .addon-item--pricing
-                span.addon-item--price $3.00
-                .form-input.addon-item--quantity
-                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='mixed-fruits' value="0" min="0"
+              .form-input.form-input__last_name
+                input type="text" data-recurly="last_name" id="last_name" name="last-name" class="form-input__required" placeholder="Last Name"
 
-            li.addons-list--item
-              span.addon-item--name Chopped Veggies
-              .addon-item--pricing
-                span.addon-item--price $5.00
-                .form-input.addon-item--quantity
-                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='chopped-veggies' value="0" min="0"
+          div#credit-card.panel
+            .row.customer-fields--email
+              .form-input.form-input__email
+                input type="text" data-recurly="email" id="email" name="email" class="form-input__required" placeholder="Email"
 
+            .row.customer-fields--card-number
+              .form-input.form-input__number
+                input type="text" data-recurly="number" id="number" name="number" class="form-input__required" placeholder="4111 1111 1111 1111"
+                span.icon.icon-card.icon-card__generic
+                span.icon.icon-lock
 
-      .row.customer-fields--name
-        .form-input.form-input__first_name
-          input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required" placeholder="First Name"
+            .row.customer-fields--card-details
+              .form-input.form-input__selection.customer-fields--card-expiry.form-input__month.form-input__year
+                  input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2" class="form-input__required"
+                  input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2" class="form-input__required"
 
-        .form-input.form-input__last_name
-          input type="text" data-recurly="last_name" id="last_name" name="last-name" class="form-input__required" placeholder="Last Name"
+              .form-input.customer-fields--card-cvv.form-input__cvv
+                input type="text" data-recurly="cvv" id="cvv" name="cvv" class="form-input__required" placeholder="CVV"
 
-      .row.customer-fields--email
-        .form-input.form-input__email
-          input type="text" data-recurly="email" id="email" name="email" class="form-input__required" placeholder="Email"
+            .row.customer-fields--address.form-input__address
+              .form-input
+                input type="text" data-recurly="address" id="address" name="address" class="form-input__required" placeholder="Address"
 
-      .row.customer-fields--card-number
-        .form-input.form-input__number
-          input type="text" data-recurly="number" id="number" name="number" class="form-input__required" placeholder="4111 1111 1111 1111"
-          span.icon.icon-card.icon-card__generic
-          span.icon.icon-lock
+            .row.customer-fields--city
+              .form-input.form-input__city
+                input type="text" data-recurly="city" id="city" name="city" class="form-input__required" placeholder="City"
 
-      .row.customer-fields--card-details
-        .form-input.form-input__selection.customer-fields--card-expiry.form-input__month.form-input__year
-            input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2" class="form-input__required"
-            input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2" class="form-input__required"
+            .row
+              .form-input.form-input__state
+                .select-wrap
+                  select data-recurly="state" id="state" name="state" class="form-input__required"
+                    option State
+                    == StatesList.to_options
 
-        .form-input.customer-fields--card-cvv.form-input__cvv
-          input type="text" data-recurly="cvv" id="cvv" name="cvv" class="form-input__required" placeholder="CVV"
-
-      .row.customer-fields--address.form-input__address
-        .form-input
-          input type="text" data-recurly="address" id="address" name="address" class="form-input__required" placeholder="Address"
-
-      .row.customer-fields--city
-        .form-input.form-input__city
-          input type="text" data-recurly="city" id="city" name="city" class="form-input__required" placeholder="City"
-
-        .form-input.form-input__state
-          select data-recurly="state" id="state" name="state" class="form-input__required"
-            option State
-            == StatesList.to_options
-
-        .form-input.form-input__postal-code
-          input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" class="form-input__required" placeholder="Zip Code"
+              .form-input.form-input__postal-code
+                input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" class="form-input__required" placeholder="Zip Code"
+            
+              .form-input.form-input__country
+                .select-wrap
+                  select data-recurly="country" id="country" name="country" class="form-input__required"
+                    option Country
+                    == StatesList.to_options
 
       .order-summary-container
-        .row.order-summary
-          div
-            | Total
-            span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
+        header.order-summary-title
+          h2 Order Summary
+        section.order-summary-details
+          .row.order-summary
+            div.addons-summary-container
+            div.row.coupon
+              ul.addons-list
+                li.addons-list--item
+                  span.addon-item--name
+                    a.coupon-text href="#" Enter coupon code
+                    span.hidden  
+                        input type="text" data-recurly="coupon" value="Enter coupon code" class="coupon-code"
+                        input type="button" id="enter-coupon" value="Apply" class="btn-submit"
+                    span.addon-item--pricing
+                      span.coupon-none --
+                        
+            div.tax
+              | Tax
+              span.total-amount
+                span.symbol data-recurly="currency_symbol"
+                span data-recurly="tax_now"
+            div.total
+              | Total
+              span.total-amount
+                span data-recurly="currency_symbol"
+                span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
 
-      .row
-        input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
+              .confirmation
+                .confirmation-body
+                  h2.confirmation-messaging 
+                    span Thank you for subscribing. 
+                    br You will be billed 
+                    span data-recurly="currency_symbol"
+                    span data-recurly="total_next" name="total-next"
+                    span  every month.
+
+          .row.hide-form-onsuccess
+            input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
+            input type="hidden" id="recurly-token" name="recurly-token"
+
+
+  == partial(:'handlebars/addons')
+  == partial(:'handlebars/addons_summary')
