advanced in progress

--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -13,7 +13,7 @@ head
   == partial(:'shared/meta')
   == partial(:'shared/scripts')
   == css :application
-  == css :advanced
+  == css :advanced_desktop
   == js :advanced_form
 
 body
