--- a/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
@@ -45,16 +45,16 @@ form {
 
     @include mq($large) {
       float: left;
-      width: grid-width(9);
+      width: grid-width(8);
     }
 
     @include mq($xlarge) {
       @include border-radius(5px);
       @include box-shadow(0px 2px 0px #CCCCCC);
-      width: grid-width(9);
+      width: grid-width(8);
     }
     @include mq($xxlarge) {
-      width: grid-width(9);
+      width: grid-width8);
     }
   }
 
@@ -62,22 +62,22 @@ form {
     .order-summary-container {
   
     width: 100%;
-    
+
     @include mq($medium) {
-      width: grid-width(3);
+      width: grid-width(4);
     }
 
     @include mq($large) {
-      width: grid-width(3);
+      width: grid-width(4);
     }
 
     @include mq($xlarge) {
-      width: grid-width(3);
+      width: grid-width(4);
     }
 
     @include mq($xxlarge) {
       float: right;
-      width: grid-width(3);
+      width: grid-width(4);
     }
   }
 
