advanced in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
@@ -54,7 +54,7 @@ form {
       width: grid-width(10);
     }
     @include mq($xxlarge) {
-      width: grid-width10);
+      width: grid-width(10);
     }
   }
 
