--- a/app/assets/stylesheets/themes/kalekrate/form-base.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-base.scss
@@ -42,7 +42,9 @@ form {
 .hidden {
   display:none;
 }
-
+select {
+  background:#fff;
+}
 select, input.quantity {
     padding:3px;
     margin: 0;
