advanced in progress

--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -150,3 +150,4 @@ body
 
   == partial(:'handlebars/addons')
   == partial(:'handlebars/addons_summary')
+  == partial(:'handlebars/advanced_confirmation')
