--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -4,5 +4,5 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
     h3.section-title--addons Add-on Items
   .row
     ul.addons-list
-    	| {{addons}}
+    	| {{data.addons}}
   | {{/if}}
