advanced in progress

--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -3,4 +3,4 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
     h3.section-title--addons Add-on Items
   .row
     ul.addons-list
-    	| {{data.addons}}
+    	| {{addons}}
