--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -6,4 +6,4 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
     	| {{{addons}}}
   .row
   	h3.section-title--addons Billing Information
-  	{{address}}
+  	| {{full-name}}
