--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -7,4 +7,5 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
   .row
   	h3.section-title--addons Billing Information
   .row
-  	p {{first-name}} {{last-name}}
+  	p 
+  	| {{address}}
