--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -7,5 +7,7 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
   .row
   	h3.section-title--addons Billing Information
   .row
-  	p 
-  	| {{address}}
+  	span 
+  	| {{address}} 
+  	span 
+  	| {{city}} | {{state}} | {{zip}} | {{country}}
