advanced in progress

--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -1,5 +1,5 @@
 handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
-{{#list}}
+| {{#list}}
   .row
     h3.section-title--addons Add-on Items
   .row
