advanced in progress

--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -18,4 +18,4 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
 	.confirmation-payment
 		span Expiration:
 		| {{month}}/{{year}}
-{{/list}}
+| {{/list}}
