advanced in progress

--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -10,7 +10,7 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
 		.row
 	  		.confirmation-address
 		  		span 
-			  	| {{firstName}} 
+			  	| {{firstName}} {{lastName}}
 			  	span 
 			  	| {{address}} 
 			  	span 
