advanced in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
@@ -98,4 +98,16 @@ form {
   right: 3px;
 }
 
+.confirmation-advanced {
+  width:49%;
+  float:left;
+  margin:  25px;
+  color: #48626c;
+    .item {
+      display:block;
+      padding-bottom:5px;
+    }
+}
+
+
   
