--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -8,14 +8,14 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
 	.row
   		h3.section-title--addons Billing Information
 	.row
-  		.confirmation-address
+  		.confirmation-address.confirmation-advanced
 	  		span.item 
 		  	| {{firstName}} {{lastName}}
 		  	span.item 
 		  	| {{address}} 
 		  	span.item 
 		  	| {{city}}, {{state}} {{zip}} {{country}}
-		.confirmation-payment
+		.confirmation-payment.confirmation-advanced
 			span.item
 			| XXX-XXX-XXX-{{number}}
 			span.item 
