advanced in progress

--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -17,9 +17,9 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
 		  	| {{city}}, {{state}} {{zip}} {{country}}
 		.confirmation-payment.confirmation-advanced
 			span.item
-			| XXX-XXX-XXX-{{number}}
+			| XXXX-XXXX-XXXX-{{number}}
 			span.item 
-				em Expiration:
+				strong Expiration:
 			| {{month}}/{{year}}
 	| {{/list}}
 
