--- a/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
@@ -108,6 +108,12 @@ form {
       padding-bottom:5px;
     }
 }
+.conformation-address {
+    width:60%;
+}
+.confirmation-payment {
+    width:35%;
+}
 
 
   
