advanced in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
@@ -99,7 +99,6 @@ form {
 }
 
 .confirmation-advanced {
-  width:49%;
   float:left;
   margin:  25px;
   color: #48626c;
@@ -108,7 +107,7 @@ form {
       padding-bottom:5px;
     }
 }
-.conformation-address {
+.confirmation-address {
     width:60%;
 }
 .confirmation-payment {
