advanced in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced-desktop.scss
@@ -108,11 +108,15 @@ form {
     }
 }
 .confirmation-address {
-    width:60%;
+    width:70%;
+    margin-left:25px;
 }
 .confirmation-payment {
-    width:35%;
+    width:25%;
+    margin-right:25px;
 }
-
+.addons-container.addons-confirmation {
+  
+}
 
   
