--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -3,8 +3,9 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
 	.row
 	    h3.section-title--addons Add-on Items
 	.row
-    	ul.addons-list
-    	| {{{addons}}}
+		.addons-container.addons-confirmation
+	    	ul.addons-list
+	    	| {{{addons}}}
 	.row
   		h3.section-title--addons Billing Information
 	.row
