--- a/app/views/amazon.slim
+++ b/app/views/amazon.slim
@@ -13,15 +13,11 @@ head
   == partial(:'shared/meta')
   == partial(:'shared/scripts')
   == css :application
-  == css :advanced
+  == css :advanced_desktop
   script src="/pay-with-amazon.js"
   == js :amazon_form
 
 body
-
-  .confirmation
-      .confirmation-body
-        h2.confirmation-messaging Thank you for subscribing.
 
   form
     input type="hidden" data-recurly="currency" id="plan_currency" name="plan-currency" value="USD"
@@ -29,13 +25,18 @@ body
       .subscription-details-container
         section.form-bar
           .subscription-name-container
-            .select-wrap
-              select data-recurly="plan" id="plan" name="plan"
+            .select-wrap.plan
+              select data-recurly="plan" id="plan" name="plan" class="plan"
                 option value="kale-fan" Kale Fan
                 option value="kale-krazy" Kale Krazy
 
-            .quantity-wrap
-              input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="quantity form-input__required" value="1"
+          .select-wrap.quantity
+            input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="form-input__required" value="1"
+
+          .select-wrap.curr
+            select data-recurly="currency_code" id="currency_code" name="currency_code" class="curr"
+              option value="USD" USD
+              option value="EUR" EUR
 
           .subscription-pricing-container
             .subscription-pricing
@@ -44,10 +45,10 @@ body
               | /month
 
         section.form-errors.form-errors__hidden
-          strong Oops! The following errors occurred:
+          strong Oops! The following fields appear to be invalid:
           ul
 
-        section.addons-container
+        section.addons-container.hide-form-onsuccess
 
         section.pay-with-amazon-container
           .row
@@ -59,27 +60,49 @@ body
           .row
             #amazon-consent
 
-
       .order-summary-container
         header.order-summary-title
           h2 Order Summary
         section.order-summary-details
           .row.order-summary
             div.addons-summary-container
+              div.addons-items-summary
+              div.row.coupon
+                ul.addons-list
+                  li.addons-list--item
+                    span.addon-item--name
+                      a.coupon-text href="#" Enter coupon code
+                      span.hidden  
+                          input type="text" data-recurly="coupon" value="Enter coupon code" class="coupon-code"
+                          input type="button" id="enter-coupon" value="Apply" class="btn-submit"
+                      span.addon-item--pricing
+                        span.coupon-none --
+                        
             div.tax
               | Tax
               span.total-amount
-                span.symbol $
+                span.symbol data-recurly="currency_symbol"
                 span data-recurly="tax_now"
             div.total
               | Total
               span.total-amount
-                span.symbol $
+                span data-recurly="currency_symbol"
                 span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
 
-          .row
-            input type="hidden" name="amazon-billing-agreement" value="" id="amazon-billing-agreement"
-            input type="submit" id="subscribe" class="btn-submit" value="Subscribe"
+              .confirmation
+                .confirmation-body
+                  h2.confirmation-messaging 
+                    span Thank you for subscribing. 
+                    br You will be billed 
+                    span data-recurly="currency_symbol"
+                    span data-recurly="total_next" name="total-next"
+                    span  every month.
+
+          .row.hide-form-onsuccess
+            input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
+            input type="hidden" id="recurly-token" name="recurly-token"
+
 
   == partial(:'handlebars/addons')
   == partial(:'handlebars/addons_summary')
+  == partial(:'handlebars/advanced_confirmation')
