Fixes coupon placeholder
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -119,7 +119,7 @@ body
                     span.addon-item--name
                       a.coupon-text href="#" Enter coupon code
                       span.hidden  
-                          input type="text" data-recurly="coupon" value="Enter coupon code" class="coupon-code"
+                          input type="text" data-recurly="coupon" placeholder="Enter coupon code" class="coupon-code"
                           input type="button" id="enter-coupon" value="Apply" class="btn-submit"
                       span.addon-item--pricing
                         span.coupon-none --
