add bank account payments

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -11,3 +11,6 @@ $mediumGray: #777777;
 $darkGray: #333333;
 
 $retina: "screen and (-webkit-min-device-pixel-ratio: 2), screen and ( min-resolution: 192dppx), screen and ( min-resolution: 2dppx)";
+
+$lightBlue: #7F9AA4;
+$darkBlue: #48626C;
