--- a/app/views/handlebars/addons.slim
+++ b/app/views/handlebars/addons.slim
@@ -14,6 +14,6 @@ handlebar id="addon-template" type="text/x-handlebars-template"
             span data-recurly="addon_price" data-recurly-addon='{{code}}'
               | {{price}}
           .form-input.addon-item--quantity
-            input type="text" data-recurly="addon" name="addon" data-recurly-addon='{{code}}' value="0" min="0"
+            input type="number" data-recurly="addon" name="addon" data-recurly-addon='{{code}}' value="0" min="0" pattern="[0-9]*" step="1"
       | {{/list}}
   | {{/if}}
