--- a/app/views/shared/scripts.slim
+++ b/app/views/shared/scripts.slim
@@ -1,4 +1,6 @@
 script src="https://js.recurly.com/v3/recurly.js"
 script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"
+script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/0.9.0/jquery.mask.min.js"
 
 link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,600" rel="stylesheet" type="text/css"
+link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"
