--- a/app/views/update_billing.slim
+++ b/app/views/update_billing.slim
@@ -71,8 +71,8 @@ body
 
       .row.customer-fields--address
         .form-input
-          label for="address" Address
-          input type="text" data-recurly="address" id="address" name="address"
+          label for="address1" Address
+          input type="text" data-recurly="address1" id="address1" name="address1"
 
       .row.customer-fields--city
         .form-input
@@ -98,4 +98,4 @@ body
             == select_options country_choices
 
       .row
-        input type='submit' id="subscribe" class="btn-submit" value="Purchase"
+        input type='submit' id="subscribe" class="btn-submit" value="Update"
