--- a/app/assets/stylesheets/themes/kalekrate/form-base.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-base.scss
@@ -62,6 +62,20 @@ select, input.quantity {
     font-size:14px;
 }
 
+hr {
+  display: block;
+  float: left;
+  height: 1px;
+  border: 0px transparent;
+  background-color: #EDEDED;
+  margin: 1em 0;
+  padding: 0;
+  width: 100%;
+
+  &.thick {
+    height: 3px;
+  }
+}
 
 /* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding. */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -72,8 +86,7 @@ select, input.quantity {
 }
 
 .select-wrap, .quantity-wrap {position:relative}
-.select-wrap:after,
-.quantity-wrap:after {
+.select-wrap:after {
     content: ' ';
     background: url('/images/icons/select-arrow-small@2x.png') center no-repeat;
     right: 20px;
@@ -87,7 +100,12 @@ select, input.quantity {
     height: 6px;
 }
 
-.select-wrap:before, .quantity-wrap:before {
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  font-size: 82px;
+  margin-right: -6px;
+}
+
+.select-wrap:before {
     content:'';
     right:3px; top:2px;
     width:26px; height:37px;
@@ -128,6 +146,36 @@ select, input.quantity {
 .customer-fields--card-number {
   input[type='text'] {
     padding: 5px 44px 5px 74px;
+  }
+}
+
+.customer-fields--account-type {
+  &.advanced {
+    label {
+      display: inline-block;
+    }
+
+    .options {
+      margin-left: 40px;
+    }
+  }
+
+  label {
+    display: block;
+  }
+
+  .options, .option, .option label {
+    display: inline-block;
+  }
+  label {
+    margin-right: 15px;
+  }
+  .options label {
+    margin-left: 10px;
+  }
+
+  .option {
+    margin-right: 20px;
   }
 }
 
@@ -173,5 +221,20 @@ select, input.quantity {
   [id="month"]:focus {
     position: relative;
     z-index: 10;
+  }
+}
+
+.form-input__routing_number {
+  .routing_number_bank {
+    background: #E5F2C6;
+    color: #5D9C1E;
+    margin: 15px 0 10px;
+    padding: 5px;
+    font-size: 12px;
+    font-weight: bold;
+
+    &:empty {
+      display: none;
+    }
   }
 }
