--- a/app/views/handlebars/advanced_confirmation.slim
+++ b/app/views/handlebars/advanced_confirmation.slim
@@ -1,7 +1,7 @@
 handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
-	| {{#list}} 
+	| {{#list}}
 	.row
-		| {{#if addons}} 
+		| {{#if addons}}
 		.addons-container.addons-confirmation
 	    	h3.section-title--addons Add-on Items
 	    	ul.addons-list
@@ -11,18 +11,29 @@ handlebar id="advanced-confirmation-template" type="text/x-handlebars-template"
   		h3.section-title--addons Billing Information
 	.row
   		.confirmation-address.confirmation-advanced
-	  		span.item 
+	  		span.item
 		  	| {{firstName}} {{lastName}}
-		  	span.item 
-		  	| {{address}} 
-		  	span.item 
+		  	span.item
+		  	| {{address}}
+		  	span.item
 		  	| {{city}}, {{state}} {{zip}} {{country}}
 		.confirmation-payment.confirmation-advanced
+			| {{#if number}}
 			span.item
-			| XXXX-XXXX-XXXX-{{number}}
-			span.item 
+			| {{number}}
+
+			span.item
 				strong Expiration:
 				| {{month}}/{{year}}
+			| {{/if}}
+
+			| {{#if account_number}}
+			span.item
+			| {{routing_number_bank}}
+			span.item
+			| {{account_number}}
+			| {{/if}}
+
 	| {{/list}}
 
 
