--- a/app/views/more.slim
+++ b/app/views/more.slim
@@ -71,8 +71,8 @@ body
 
       .row.customer-fields--address
         .form-input
-          label for="address" Address
-          input type="text" data-recurly="address" id="address" name="address"
+          label for="address1" Address
+          input type="text" data-recurly="address1" id="address1" name="address1"
 
       .row.customer-fields--city
         .form-input
