Removing name attributes as this conflicts with rjs advice

--- a/app/views/one_time.slim
+++ b/app/views/one_time.slim
@@ -58,7 +58,7 @@ body
       .row.customer-fields--card-number
         .form-input.form-input__number
           label for="number" Credit Card Number
-          input type="text" data-recurly="number" id="number" name="number"
+          input type="text" data-recurly="number" id="number"
           span.icon.icon-card.icon-card__generic
           span.icon.icon-lock
 
@@ -70,7 +70,7 @@ body
 
         .form-input.customer-fields--card-cvv.form-input__cvv
           label for="cvv" CVC
-          input type="text" data-recurly="cvv" id="cvv" name="cvv" maxlength="4"
+          input type="text" data-recurly="cvv" id="cvv" maxlength="4"
 
       == partial(:'shared/one_time/address_info')
 
