--- a/app/views/minimal.slim
+++ b/app/views/minimal.slim
@@ -58,7 +58,7 @@ body
       .row.customer-fields--card-number
         .form-input.form-input__number
           label for="number" Credit Card Number
-          input type="text" data-recurly="number" id="number" name="number" class="form-input__required"
+          input type="text" data-recurly="number" id="number" class="form-input__required"
           span.icon.icon-card.icon-card__generic
           span.icon.icon-lock
 
@@ -70,7 +70,7 @@ body
 
         .form-input.customer-fields--card-cvv.form-input__cvv
           label for="cvv" CVV
-          input type="text" data-recurly="cvv" id="cvv" name="cvv" maxlength="4" class="form-input__required"
+          input type="text" data-recurly="cvv" id="cvv" maxlength="4" class="form-input__required"
 
         .form-input.customer-fields--card-postal-code.form-input__postal_code
           label for="postal_code" Zip Code
